--- a/index.html
+++ b/index.html
@@ -6,5 +6,11 @@
     <title>Exercice Hebdomadaire 4</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body></body>
+  <body>
+    <img src="Icon.png" alt="" />
+    <div>
+      <h1><strong>attention !</strong> Site glissant.</h1>
+      <p>ne scrollez pas trop vite.</p>
+    </div>
+  </body>
 </html>
